--- a/arxiv/2022_01_arxiv.html
+++ b/arxiv/2022_01_arxiv.html
@@ -125,8 +125,63 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
-<p class="p1">20220101</p>
-
+<p class="p1">20220103</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.14785">https://arxiv.org/abs/2112.14785</a></span> In-plane orbital magnetization as a probe for symmetry breaking in strained twisted bilayer graphene (Ady Stern, Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.15209">https://arxiv.org/abs/2112.15209</a></span> Evaluating second-order phase transitions with Diagrammatic Monte Carlo: N ́eel Transition in the doped three-dimensional Hubbard model (Aaram J. Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.15549">https://arxiv.org/abs/2112.15549</a></span> Vertex-based Diagrammatic Treatment of Light-Matter-Coupled Systems (Aaram J. Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20220104</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.00175">https://arxiv.org/abs/2201.00175</a></span> Kondo effect in a non-Hermitian, PT -symmetric Anderson model with Rashba spin-orbit coupling</p>
+<p class="p2"><br></p>
+<p class="p1">20220105</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.00831">https://arxiv.org/abs/2201.00831</a></span> Universal Josephson diode effect (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.01082">https://arxiv.org/abs/2201.01082</a></span> Critical behaviors of lattice U(1) gauge models and three-dimensional Abelian-Higgs gauge field theory (Ettore Vicari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.00828">https://arxiv.org/abs/2201.00828</a></span> Uncovering footprints of dipolar-octupolar quantum spin ice from neutron scattering signatures (Masashi Hosoi, Emily Z. Zhang, Adarsh S. Patri, Yong Baek Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20220106</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.01472">https://arxiv.org/abs/2201.01472</a></span> A non-perturbative study of the interplay of two fermion-boson interactions</p>
+<p class="p2"><br></p>
+<p class="p1">20220107</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.02170">https://arxiv.org/abs/2201.02170</a></span> MAGNETIC RESPONSE OF TWISTED BILAYER GRAPHENE</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.15628">https://arxiv.org/abs/2106.15628</a></span> Revovery algorithms for Clifford Hayden-Preskill problem</p>
+<br>
+<p class="p1">20220110</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.02567">https://arxiv.org/abs/2201.02567</a></span> Emergence of spinons in layered trimer iridate Ba4Ir3O10</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.02586">https://arxiv.org/abs/2201.02586</a></span> DMRG and Monte Carlo studies of CrI3 magnetic phases and the phase transition</p>
+<p class="p2"><br></p>
+<p class="p1">20220111</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.02820">https://arxiv.org/abs/2201.02820</a></span> Are Heavy Fermion Strange Metals Planckian? *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.03132">https://arxiv.org/abs/2201.03132</a></span> Symmetry analysis of quasi-one-dimensional bond-alternating Kitaev spin models (Ian Affleck)</p>
+<p class="p2"><br></p>
+<p class="p1">20220112</p>
+<p class="p3"><a href="https://arxiv.org/abs/2201.03577">https://arxiv.org/abs/2201.03577</a><span class="s2"> Topological space-time crystal **</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.04132">https://arxiv.org/abs/2201.04132</a></span> The dipolar Bose-Hubbard model ***** (Ethan Lake, Michael Hermele, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.04034">https://arxiv.org/abs/2201.04034</a></span> Dynamical preparation of quantum spin liquids in Rydberg atom arrays **** (M. D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.03565">https://arxiv.org/abs/2201.03565</a></span> Hydrodynamic effective field theories with discrete rotational symmetry *** (Xiaoyang Huang, Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.03568">https://arxiv.org/abs/2201.03568</a></span> Quantum error correction with fractal topological codes *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.03738">https://arxiv.org/abs/2201.03738</a></span> Exact solutions of Kondo problems in higher-order fermions ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.04045">https://arxiv.org/abs/2201.04045</a></span> Raman response and shear viscosity in the non-Fermi liquid phase of Luttinger semimetals *** (Ipsita Mandal)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2201.03593">https://arxiv.org/abs/2201.03593</a><span class="s2"> Feynman Integrals ***</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.14550">https://arxiv.org/abs/2112.14550</a></span> Gauging ZN Discrete Symmetry of 5d SCFTs (Kimyeong Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.13574">https://arxiv.org/abs/2107.13574</a></span> Projective symmetry group classification of chiral Z2 spin liquids on the pyrochlore lattice: application to the spin-1/2 XXZ Heisenberg model ** (Matthias Punk)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.14886">https://arxiv.org/abs/2106.14886</a></span> Wormhole calculus without averaging from O(N)q−1 tensor model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2105.10138">https://arxiv.org/abs/2105.10138</a></span> Relativistic massive particle with spin-1/2, a vector bundle point of view</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1907.09415">https://arxiv.org/abs/1907.09415</a></span> Quantum Computing: Lecture Notes *****</p>
+<p class="p2"><br></p>
+<p class="p1">20220113</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.04274">https://arxiv.org/abs/2201.04274</a></span> Asymmetric modulation of Majorana excitation spectra and nonreciprocal thermal transport in the Kitaev spin liquid under a staggered magnetic field (Yukitoshi Motome)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.04474">https://arxiv.org/abs/2201.04474</a></span> Finite Size Effects from General Covariance and Weyl Anomaly</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.13411">https://arxiv.org/abs/2109.13411</a></span> Abelian Chern-Simons gauge theory on the lattice</p>
+<p class="p2"><br></p>
+<p class="p1">20220114</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.05035">https://arxiv.org/abs/2201.05035</a></span> Entanglement entropy in (2 + 1)D interacting theory: A dimension reduction approach ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.04886">https://arxiv.org/abs/2201.04886</a></span> A comprehensive co-variant gauge theory of fracton phase of matter. *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.05054">https://arxiv.org/abs/2201.05054</a></span> Mapping SYK to the Sky ** (Herman Verlinde)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2109.11039">https://arxiv.org/abs/2109.11039</a></span> Classification of (2+1)D invertible fermionic topological phases with symmetry (Maissam Barkeshli, Po-Shen Hsin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.09779">https://arxiv.org/abs/2107.09779</a></span> A Note on h2,1 of Divisors in CY Fourfolds I (Manki Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.07866">https://arxiv.org/abs/2012.07866</a></span> Transport in the non-Fermi liquid phase of isotropic Luttinger semimetals (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1906.03308">https://arxiv.org/abs/1906.03308</a></span> The chiral SYK model (S. L. Sondhi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.04634">https://arxiv.org/abs/2201.04634</a></span> D-Instanton Superpotential In String Theory ***** (Manki Kim)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
