--- a/arxiv/2022_01_arxiv.html
+++ b/arxiv/2022_01_arxiv.html
@@ -181,7 +181,69 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.09779">https://arxiv.org/abs/2107.09779</a></span> A Note on h2,1 of Divisors in CY Fourfolds I (Manki Kim)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2012.07866">https://arxiv.org/abs/2012.07866</a></span> Transport in the non-Fermi liquid phase of isotropic Luttinger semimetals (Ipsita Mandal)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1906.03308">https://arxiv.org/abs/1906.03308</a></span> The chiral SYK model (S. L. Sondhi)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.04634">https://arxiv.org/abs/2201.04634</a></span> D-Instanton Superpotential In String Theory ***** (Manki Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.04634">https://arxiv.org/abs/2201.04634</a></span> D-Instanton Superpotential In String Theory ***** (Manki Kim)</p><br>
+<p class="p1">20220117</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.05468">https://arxiv.org/abs/2201.05468</a></span> Theory of collective topologically-protected Majorana fermion excitations of networks of localized Majorana modes ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.05432">https://arxiv.org/abs/2201.05432</a></span> Doped Mott insulator on Penrose tiling ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.05508">https://arxiv.org/abs/2201.05508</a></span> Memories of Steven Weinberg (1933-2021) ***</p>
+<p class="p2"><br></p>
+<p class="p1">20220119</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.05952">https://arxiv.org/abs/2201.05952</a></span> Replica Symmetry Breaking for the Integrable Two-Site Sachdev-Ye-Kitaev Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.06587">https://arxiv.org/abs/2201.06587</a></span> Selberg trace formula and hyperbolic band theory ** (Igor Boettcher)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.07205">https://arxiv.org/abs/2201.07205</a></span> Mixed-order topology of Benalcazar-Bernevig-Hughes models (Shouvik Sur, Pallab Goswami)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.07191">https://arxiv.org/abs/2201.07191</a></span> Vortices in polar and β phases of 3He (G.E. Volovik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.07171">https://arxiv.org/abs/2201.07171</a></span> Exploring Bosonic and Fermionic Link Models on (3 + 1)−d tubes **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.06585">https://arxiv.org/abs/2201.06585</a></span> Construction of Entangled Many-body States via the Higgs Mechanism ***** (Pureum Noh, Eun-Gook Moon)</p>
+<p class="p2"><br></p>
+<p class="p1">20220120</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.07397">https://arxiv.org/abs/2201.07397</a></span> Supercurrent-induced Weyl superconductivity *** (Kazuaki Takasan)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.07792">https://arxiv.org/abs/2201.07792</a></span> Characterizing Long-Range Entanglement in a Mixed State Through an Emergent Order on the Entangling Surface *** (Sagar Vijay)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.07239">https://arxiv.org/abs/2201.07239</a></span> Gauging U(1) symmetry in (2+1)d topological phases ***** (Meng Cheng, Chao-Ming Jian)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2201.07254">https://arxiv.org/abs/2201.07254</a><span class="s2"> Free-Fermion Subsystem Codes</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.07731">https://arxiv.org/abs/2201.07731</a></span> Interplay of hyperbolic plasmons and superconductivity *** (Victor Galitski)</p>
+<p class="p2"><br></p>
+<p class="p1">20220121</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.07991">https://arxiv.org/abs/2201.07991</a></span> Chiral anomaly in non-relativistic systems: Berry curvature and chiral kinetic theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.14765">https://arxiv.org/abs/2112.14765</a></span> Cobordism and Deformation Class of the Standard Model **** (Juven Wang, Zheyan Wan, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.08123">https://arxiv.org/abs/2201.08123</a></span> Emergent flat-band physics in d9−δ multilayer nickelates</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.08090">https://arxiv.org/abs/2201.08090</a></span> Boundary Superconductivity in the BCS Model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.08181">https://arxiv.org/abs/2201.08181</a></span> Axial anomaly in the gradient flow exact renormalization group ***</p>
+<p class="p2"><br></p>
+<p class="p1">20220124</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.08575">https://arxiv.org/abs/2201.08575</a></span> Dual dynamic scaling in deconfined quantum criticality ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.08801">https://arxiv.org/abs/2201.08801</a></span> Anomalous metals: From “failed superconductor” to “failed insulator”</p>
+<p class="p2"><br></p>
+<p class="p1">20220125</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.09456">https://arxiv.org/abs/2201.09456</a></span> Concurrent Topological Transitions of Zone-Center van Hove Singularity and Type-II Dirac Fermions in Two-Dimensional Biphenylene Network (Young-Woo Son, Hosub Jin, Sejoong Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.09520">https://arxiv.org/abs/2201.09520</a></span> The critical O(N) CFT: Methods and conformal data</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.09856">https://arxiv.org/abs/2201.09856</a></span> Persistent Homology of Z2 Gauge Theories (Roger G. Melko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.09836">https://arxiv.org/abs/2201.09836</a></span> Complete classification of band nodal structures ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.09842">https://arxiv.org/abs/2201.09842</a></span> Out-of-time-order correlations and Floquet dynamical quantum phase transition ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.09220">https://arxiv.org/abs/2201.09220</a></span> Quantum Many-Body Scars in Spin-1 Kitaev Chains</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.09307">https://arxiv.org/abs/2201.09307</a></span> Some aspects of Affleck-Kennedy-Lieb-Tasaki models: tensor network, physical properties, spectral gap, deformation, and quantum computation ***** (Ian Affleck)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2201.09397">https://arxiv.org/abs/2201.09397</a><span class="s2"> LIE GROUPS AND LIE ALGEBRAS **</span></p>
+<p class="p2"><br></p>
+<p class="p1">20220126</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.10270">https://arxiv.org/abs/2201.10270</a></span> Strange metallicity of moir ́e twisted bilayer graphene ***** (Sankar Das Sarma)</p>
+<p class="p2"><br></p>
+<p class="p1">20220127</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.10880">https://arxiv.org/abs/2201.10880</a></span> Non-adiabatic corrections to a chiral anomaly in topological nodal semimetals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.10580">https://arxiv.org/abs/2201.10580</a></span> Krein-Hermitian Schrieffer-Wolff transformation and band touchings in bosonic BdG Hamiltonians (Ilia Khait, Arun Paramekanti)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.10589">https://arxiv.org/abs/2201.10589</a></span> Global Dipole Symmetry, Compact Lifshitz Theory, Tensor Gauge Theory, and Fractons ***** (Pranay Gorantla, Ho Tat Lam, Nathan Seiberg Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.10995">https://arxiv.org/abs/2201.10995</a></span> Instability of the ferromagnetic quantum critical point in strongly interacting 2D and 3D electron gases with arbitrary spin-orbit splitting ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.11049">https://arxiv.org/abs/2201.11049</a></span> S-confinements from deconfinements</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.11090">https://arxiv.org/abs/2201.11090</a></span> Dualities from dualities: the sequential deconfinement technique</p>
+<p class="p3"><a href="https://arxiv.org/abs/2201.10574">https://arxiv.org/abs/2201.10574</a><span class="s2"> Basic Quantum Algorithms ***</span></p>
+<p class="p2"><br></p>
+<p class="p1">20220128</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.11681">https://arxiv.org/abs/2201.11681</a></span> Resonant side-jump thermal Hall effect of phonons coupled to dynamical defects *** (Haoyu Guo, Darshan G. Joshi, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.11237">https://arxiv.org/abs/2201.11237</a></span> Wigner - Weyl calculus in description of non - dissipative transport phenomena</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.11530">https://arxiv.org/abs/2201.11530</a></span> Topological flat bands in a kagom ́e lattice multiorbital system **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2112.12118">https://arxiv.org/abs/2112.12118</a></span> Introductory Notes on Non-linear Electrodynamics and its Applications</p>
+<p class="p2"><br></p>
+<p class="p1">20220131</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.12119">https://arxiv.org/abs/2201.12119</a></span> Diffusive density response of electrons in anisotropic multiband systems (Hongki Min)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.11943">https://arxiv.org/abs/2201.11943</a></span> Intrinsic magnetism in superconducting infinite-layer nickelates (Harold Y. Hwang)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
