--- a/arxiv/2022_02_arxiv.html
+++ b/arxiv/2022_02_arxiv.html
@@ -4,7 +4,7 @@
 <title>SangEun Han</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0, user-scalable=yes"/>
-
+<meta charset="utf-8">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <!-- png favicon--> 
@@ -84,9 +84,7 @@ a:hover {text-decoration: underline; color: darkgray;}
 #center {font-size:10pt; width:900px; background-color:FFFFFF; font-family:Open Sans; padding-top:5px;padding-right:10px; padding-bottom:5px; padding-left:10px; margin:0 auto; }
 }
 
-#lastcenter {width:100%; background-color:FFFFFF; text-align:center;
-        margin: 0;
-        padding: 0;}
+#last {width:100%; background-color:FFFFFF; text-align:center;}
 
 .cvitemize { font-size:110%; font-weight: bold;}
 .cvitem { font-weight: bold; font-family:Open Sans;}
@@ -106,12 +104,50 @@ a:hover {text-decoration: underline; color: darkgray;}
 </script>
  <link href='//fonts.googleapis.com/css?family=Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
-
-<body style="background-color:#FFFFFF">
+<style type="text/css">
+    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Open Sans'}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Open Sans'; min-height: 14.0px}
+    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Open Sans'; color: #dca10d}
+    span.s1 {color: #000000}
+    span.s2 {color: #000000}
+    span.s3 {color: #000000}
+    span.s4 {font: 12.0px '.Apple SD Gothic NeoI'; color: #dca10d}
+    span.s5 {color: #000000}
+  </style>
+<body style="background-color:#EFEFEF">
 
 <div id="center">
 
-<div style="font-size:75%" id="lastcenter">since 2014-12-31 / last update 2022-02-05</div>
+<div id="title">Today's arXiv</div>
+<iframe src="../titlecontent.html" style="width:100%; height:63; border:none"></iframe>
+<!---<div id="titlecontent">
+<span class="cvitemcontent">e-mail: sehan at kaist.ac.kr<br>
+<a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
+<a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
+<br>
+<p class="p1">20220201</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.13310">https://arxiv.org/abs/2201.13310</a></span> Lectures on entanglement in quantum field theory ***</p>
+<p class="p3"><a href="https://arxiv.org/abs/2003.02773">https://arxiv.org/abs/2003.02773</a><span class="s2"> Wilson Action for the O(N) Model</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.13101">https://arxiv.org/abs/2201.13101</a></span> Field theory of structured liquid dielectrics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.12640">https://arxiv.org/abs/2201.12640</a></span> Model A of critical dynamics: 5-loop ε expansion study</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.12361">https://arxiv.org/abs/2201.12361</a></span> Electric-magnetic duality of Z2 symmetry enriched cyclic Abelian lattice gauge theory</p>
+<p class="p2"><br></p>
+<p class="p1">20220202</p>
+<p class="p3"><a href="https://arxiv.org/abs/2012.15860">https://arxiv.org/abs/2012.15860</a><span class="s2"> Ultra Unification (Juven Wang)</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.00426">https://arxiv.org/abs/2202.00426</a></span> A critical look into Luttinger’s theorem **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.00326">https://arxiv.org/abs/2202.00326</a></span> Noether type formulation for space dependent polynomial symmetries</p>
+<p class="p2"><br></p>
+<p class="p1">20220203</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.00689">https://arxiv.org/abs/2202.00689</a></span> Joule heating in bad and slow metals (Sean A. Hartnoll)</p>
+<p class="p2"><br></p>
+<p class="p1">20220204</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.01224">https://arxiv.org/abs/2202.01224</a></span> Pair-density-wave superconductor from doping Haldane chain and rung-singlet ladder **** (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.01231">https://arxiv.org/abs/2202.01231</a></span> Interaction Enabled Fractonic Higher-Order Topological Phases ***** (Yizhi You, Taylor L. Hughes ,Zhen Bi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.01238">https://arxiv.org/abs/2202.01238</a></span> Berry Phases of Vison Transport in Z2 Topological Ordered States from Exact Fermion-Flux Lattice Dualities ***</p>
+	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
+	</div>
+
+<!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
 
 </div>
 </body>
