--- a/arxiv/2022_02_arxiv.html
+++ b/arxiv/2022_02_arxiv.html
@@ -143,7 +143,37 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1">20220204</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.01224">https://arxiv.org/abs/2202.01224</a></span> Pair-density-wave superconductor from doping Haldane chain and rung-singlet ladder **** (Ashvin Vishwanath)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.01231">https://arxiv.org/abs/2202.01231</a></span> Interaction Enabled Fractonic Higher-Order Topological Phases ***** (Yizhi You, Taylor L. Hughes ,Zhen Bi)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.01238">https://arxiv.org/abs/2202.01238</a></span> Berry Phases of Vison Transport in Z2 Topological Ordered States from Exact Fermion-Flux Lattice Dualities ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.01238">https://arxiv.org/abs/2202.01238</a></span> Berry Phases of Vison Transport in Z2 Topological Ordered States from Exact Fermion-Flux Lattice Dualities ***</p><br>
+<p class="p1">20220207</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.06587">https://arxiv.org/abs/2201.06587</a></span> Selberg trace formula and hyperbolic band theory **** (Igor Boettcher)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.01791">https://arxiv.org/abs/2202.01791</a></span> Integer and fractionalized vortex lattices and off-diagonal long-range order (Jörg Schmalian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.01845">https://arxiv.org/abs/2202.01845</a></span> Maximal quantum chaos of the critical Fermi surface ***** (Maria Tikhanovskaya, Subir Sachdev, Aavishkar A. Patel)</p>
+<p class="p2"><br></p>
+<p class="p1">20220208</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.02548">https://arxiv.org/abs/2202.02548</a></span> Many-body topology of non-Hermitian systems **** (Ken Shiozaki, Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.02875">https://arxiv.org/abs/2202.02875</a></span> To See a World in a Grain of Sand ── The Scientific Life of Shoucheng Zhang ***** (Biao Lian, Chao-Xing Liu, Xiao-Qi Sun, Steven Kivelson, Eugene Demler and Xiao-Liang Qi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.02910">https://arxiv.org/abs/2202.02910</a></span> Semiclassical magnetotransport including the effects of the Berry curvature and Lorentz force (Hongki Min)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.02917">https://arxiv.org/abs/2202.02917</a></span> Nonequilibrium topological spin textures in momentum space **** (Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.03417">https://arxiv.org/abs/2202.03417</a></span> Fate of higher-order topological insulator under Coulomb interaction *** (Jing-Rong Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.03357">https://arxiv.org/abs/2202.03357</a></span> A note on continuous entropy *** (Edward Witten)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.06867">https://arxiv.org/abs/2108.06867</a></span> Heun’s equation and analytic structure of the Gap in Holographic superconductivity (Sang-Jin Sin)</p>
+<p class="p2"><br></p>
+<p class="p1">20220209</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.03462">https://arxiv.org/abs/2202.03462</a></span> Zoology of non-Hermitian spectra and their graph topology ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.03750">https://arxiv.org/abs/2202.03750</a></span> Critical behavior of active Brownian particles: Connection to field theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.03445">https://arxiv.org/abs/2202.03445</a></span> Exceptional dynamics of interacting spin liquids ** (Frank Wilczek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.03294">https://arxiv.org/abs/2202.03294</a></span> THE EXACT RENORMALIZATION GROUP AND DIMENSIONAL REGULARIZATION **</p>
+<p class="p2"><br></p>
+<p class="p1">20220210</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.04630">https://arxiv.org/abs/2202.04630</a></span> Non-Fermi liquid to Fermi liquid crossover inside a valley-polarized nematic state ***** (Ipsita Mandal, Rafael M. Fernandes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.04614">https://arxiv.org/abs/2202.04614</a></span> Three-dimensional monopole-free CPN−1 models: Behavior in the presence of a quartic potential (Ettore Vicari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.04605">https://arxiv.org/abs/2202.04605</a></span> Renormalization group study of marginal ferromagnetism</p>
+<p class="p2"><br></p>
+<p class="p1">20220211</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.05255">https://arxiv.org/abs/2202.05255</a></span> Topogivity: A Machine-Learned Chemical Rule for Discovering Topological Materials ***** (Hoi Chun Po, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.05045">https://arxiv.org/abs/2202.05045</a></span> Entanglement Hamiltonians - from field theory, to lattice models and experiments</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.04668">https://arxiv.org/abs/2202.04668</a></span> Spinless fermions in a Z2 gauge theory on the triangular ladder</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.05029">https://arxiv.org/abs/2202.05029</a></span> Moments and multiplets in moir ́e materials - A pseudo-fermion functional renormalization group for spin-valley models ***</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
