--- a/arxiv/2022_03_arxiv.html
+++ b/arxiv/2022_03_arxiv.html
@@ -152,7 +152,43 @@ a:hover {text-decoration: underline; color: darkgray;}
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.01563">https://arxiv.org/abs/2203.01563</a></span> Emergent space-time supersymmetry at disorder quantum critical point **** (Shao-Kai Jian)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.01930">https://arxiv.org/abs/2203.01930</a></span> Electron correlations and charge density wave in the topological kagome metal FeGe (Qimiao Si)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2202.06169">https://arxiv.org/abs/2202.06169</a></span> Interacting 1D Chiral Fermions with Pairing: Transition from Integrable to Chaotic</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.05035">https://arxiv.org/abs/2201.05035</a></span> Entanglement entropy in (2 + 1)-dimensional interacting theory: A dimensional reduction approach</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.05035">https://arxiv.org/abs/2201.05035</a></span> Entanglement entropy in (2 + 1)-dimensional interacting theory: A dimensional reduction approach</p><br>
+<p class="p2">20220307</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.01957">https://arxiv.org/abs/2203.01957</a></span> Anomalous gapped boundaries between surface topological orders in higher-order topological insulators and superconductors with inversion symmetry (Titus Neupert, S. A. Parameswaran, Apoorv Tiwari)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.01962">https://arxiv.org/abs/2203.01962</a></span> Anisotropic deconfined criticality in Dirac spin liquids ****** (Henry Shackleton, Subir Sachdev)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.02319">https://arxiv.org/abs/2203.02319</a></span> Two-band model and RVB-type states: application to Kondo lattices, pyrochlores and Mn-based systems **</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.02341">https://arxiv.org/abs/2203.02341</a></span> Interplay of magnetism and superconductivity in 2D extended Hubbard model **</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.02206">https://arxiv.org/abs/2203.02206</a></span> Non-local Lagrangian fields: Noether’s theorem and Hamiltonian formalism **</p>
+<p class="p1"><br></p>
+<p class="p2">20220308</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.02518">https://arxiv.org/abs/2203.02518</a></span> SU(2)-symmetric spin-boson model: Quantum criticality, fixed-point annihilation, and duality ***** (Matthias Vojta)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2203.02727">https://arxiv.org/abs/2203.02727</a><span class="s2"> Unstable Nambu-Goldstone modes</span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.02890">https://arxiv.org/abs/2203.02890</a></span> Progress and Prospects In Magnetic Topological Materials (B. Andrei Bernevig)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.03284">https://arxiv.org/abs/2203.03284</a></span> Hybrid skin-topological modes without asymmetric couplings</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.02817">https://arxiv.org/abs/2203.02817</a></span> Asymptotic symmetries and soft charges of fractons *****</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.03596">https://arxiv.org/abs/2203.03596</a></span> Algebra of local symmetric operators and braided fusion n-category – symmetry is a shadow of topological order ***** (Arkya Chatterjee Xiao-Gang Wen)</p>
+<p class="p1"><br></p>
+<p class="p2">20220309</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.04281">https://arxiv.org/abs/2203.04281</a></span> Magneto-transport signatures in periodically-driven Weyl and multi-Weyl semimetals (Ipsita Mandal)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.04104">https://arxiv.org/abs/2203.04104</a></span> A solvable 3D Kondo lattice exhibiting odd-frequency pairing and order fractionalization ***** (Piers Coleman, Alexei Tsvelik)</p>
+<p class="p1"><br></p>
+<p class="p2">20220310</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.04942">https://arxiv.org/abs/2203.04942</a></span> Topological defects in nonlocal field theories *****</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2106.02069">https://arxiv.org/abs/2106.02069</a></span> A unified view on symmetry, anomalous symmetry, and non-invertible gravitational anomaly ***** (Wenjie Ji Xiao-Gang Wen)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2201.04634">https://arxiv.org/abs/2201.04634</a></span> D-Instanton Superpotential In String Theory ***** (Manki Kim)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.04318">https://arxiv.org/abs/2203.04318</a></span> The low energy excitation spectrum of magic-angle semimetals *** (J. H. Pixley)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2203.04471">https://arxiv.org/abs/2203.04471</a><span class="s2"> Topological Shiba Metals</span></p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.04718">https://arxiv.org/abs/2203.04718</a></span> Snowmass White Paper: New ideas for many-body quantum systems from string theory and black holes ***** (Mike Blake, Yingfei Gu, Sean A. Hartnoll, Hong Liu, Andrew Lucas, Krishna Rajagopal, Brian Swingle, Beni Yoshida)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.04449">https://arxiv.org/abs/2203.04449</a></span> Unsupervised learning of two-component nematicity from STM data on magic angle bilayer graphene **** (Eun-Ah Kim)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.04867">https://arxiv.org/abs/2203.04867</a></span> Compartmentalizing the cuprate strange metal</p>
+<p class="p1"><br></p>
+<p class="p2">20220311</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.05228">https://arxiv.org/abs/2203.05228</a></span> Critical structure and emergent symmetry of Dirac fermion systems</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.05172">https://arxiv.org/abs/2203.05172</a></span> Interplay of charge and spin fluctuations in a Hund’s coupled impurity ** (Piers Coleman)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.05058">https://arxiv.org/abs/2203.05058</a></span> Quantum Error Correction in SYK and Bulk Emergence ***</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.05480">https://arxiv.org/abs/2203.05480</a></span> Pair-density-wave and chiral superconductivity in twisted bilayer transition-metal-dichalcogenides *** (Yi-Ming Wu, Hong Yao)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.04990">https://arxiv.org/abs/2203.04990</a></span> Universal T-linear resistivity in two-dimensional quantum-critical metals from spatially random interactions ***** (Aavishkar A. Patel, Haoyu Guo, Ilya Esterlis, Subir Sachdev)</p>
+<p class="p2"><span class="s1"><a href="https://arxiv.org/abs/2203.05004">https://arxiv.org/abs/2203.05004</a></span> Nonlinear Bosonization of Fermi Surfaces: The Method of Coadjoint Orbits (Dam Thanh Son)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
