--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
 
 <style type="text/css">
+	p.emphtext{
+  font-size: 18px;
+}
  @font-face {
   font-family: 'Open Sans';
   font-style: normal;
@@ -122,6 +125,8 @@ a:hover {text-decoration: underline; color: darkgray;}
 <a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
+<b><p class=emphtext>Now I am finding my next position. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.<br><br>
+I will present my recent work, <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747}">"Fractonic Quantum Phases in Breathing Pyrochlore Lattice", on Thursday (03/17) at 10:24 AM–10:36 AM</a> in 2022 APS March Meeting. I will stay in Chicago from Sunday (03/13) to Friday (03/18). Please contact me by email if you are interested. We may meet in person in Chicago</p></b><br><br>
 pdf version of CV: <a href="20210910_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2021/09/10)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
